<resources>
    <string name="version">1.4.2</string>
    <string name="phone">+61452065052</string>
    <string name="email">thapasujan5@gmail.com</string>
    <string name="fbID">1230665286</string>
    <string name="fbName">sujanthapa55</string>
    <string name="twitterID">thapasujan5</string>
    <string name="youtubeChannelID">https://www.youtube.com/channel/UCWHwD_GvYj8i8-8I4ulkchA</string>
    <string name="isp_check">Checking ISP Information.</string>
    <string name="EditTextHeader">Search any IP or DNS Name</string>
    <string name="HintSearchBox"><i>Search IP or DNS</i></string>
    <string name="bitlyurl">http://bit.ly/1Wd8iPk</string>
    <string name="ivSearchDesc">Search</string>
    <string name="tvEntriesText">0 Entries</string>
    <string name="ivClearDesc">Clear</string>
    <string name="ivShareDesc">Share</string>
    <string name="ivCopyDesc">Copy</string>
    <string name="newFeatures">- Port Scanner.\n- Android 6.0 (Marshmallow) Compatible.\n- Security and Performances Impro.\n- Bug Fixes.\n- Minor Patches.</string>
    <string name="oops_something_went_wrong_try_in_a_while_">Oops! We can\'t figure out what\'s that.</string>
    <string name="feedbackSubject">Subject of Feedback</string>
    <string name="about_content"><b><u>Developer</u></b>\nSujan Thapa\nSydney, Australia\n+61452065052\nthapasujan5@gmail.com</string>
    <string name="feedbackDetails">Report Details</string>
    <string name="ping_result_title"><b>Ping Statistics for 192.168.1.1</b></string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>


    <string-array name="pref_temperatures">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="pref_temperature_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string-array name="pref_ping_packets">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>8</item>
    </string-array>
    <string-array name="pref_ping_values">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>8</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data Cache Settings</string>

    <string name="pref_title_flush_frequency">Flush Frequency</string>
    <string-array name="pref_flush_frequency_titles">
        <item>1 Day</item>
        <item>1 Week</item>
        <item>15 Days</item>
        <item>1 Month[30 Days]</item>
        <item>6 Months</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_flush_frequency_values">
        <item>1</item>
        <item>7</item>
        <item>15</item>
        <item>30</item>
        <item>180</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_isp_notifications">Notification</string>

    <string name="pref_title_ringtone">Notification Sound</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <string name="portal_id">1518916698434996</string>
    <string name="portal_name">netanalyzer</string>
    <string name="notification_ongoing">OnGoing Notification</string>
    <string name="key_notification_sticky">sticky</string>
    <string name="key_notification_ongoing">ongoing</string>
    <string name="title_activity_tab1">Tab1Activity</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="limited_access">Limited Network Access !</string>
    <string name="intranet_env">Intranet Environment.</string>
    <string name="no_connection">No wirelss or mobile data connection.</string>
    <string name="general_err">Something went wrong. Try again.</string>
    <string name="title_dnslookup">DNS LookUp</string>
    <string name="title_networkdiscovery">Network Discovery</string>
    <string name="title_ping">Custom Ping</string>
    <string name="title_connectiondetails">Connection Details</string>
    <string name="title_tell_a_friend">Tell a Friend</string>
    <string name="title_rate_app">Rate App</string>
    <string name="title_report">Report</string>
    <string name="title_like_us">Like Us</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="title_tools">App Tools</string>
    <string name="title_social">Be Social</string>
    <string name="port_scanner">Port Scanner</string>
    <string name="desc_ssid">Slide down to turn WIFI ON.</string>
    <string name="title_activity_network_discovery">Network Discovery</string>
    <string name="mac">mac</string>
    <string name="routerip">routerip</string>
    <string name="ssid">ssid</string>
    <string name="percent">percent</string>
    <string name="ip">ip</string>
    <string name="time">time</string>
    <string name="exit">Exit</string>
    <string name="screenshot">Screenshot</string>
    <string name="scan_rate">Discovery Rate</string>
    <string name="collapsed">CollapsedText</string>
    <string name="city">city</string>
    <string name="org">org</string>
    <string name="country">country</string>
    <string name="extIpAdd">extIpAdd</string>
    <string name="intIp">intIp</string>
    <string name="main_weather">main_weather</string>
    <string name="icon_weather">icon_weather</string>
    <string name="temp_weather">temp_weather</string>
    <string name="name_weather">name_weather</string>
    <string name="nda_snackbar_text">Perform Quick Ping from here.</string>
    <string name="lon">lon</string>
    <string name="lat">lat</string>
    <string name="read_phone_state">read_phone_state</string>

    <string name="access_fine_location">access_fine_location</string>
    <string name="access_corase_location">access_corase_location</string>
    <string name="write_external_storage">write_external_storage</string>
    <string name="read_external_storage">read_external_storage</string>
    <string name="wlan0">wlan0</string>
    <string name="network_error">Network Error !</string>
    <string name="disconnected">Disconnected.</string>
    <string name="startup_scan">startup_scan</string>
    <string name="title_startup_discovery">Startup Discovery</string>
    <string name="key_temperature">key_temperature</string>
    <string name="key_ping">key_ping</string>
    <string name="title_activity_settings_activitytemp">Settings</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="key_clear_cache">key_clear_cache</string>
    <string name="channel">channel</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="weather_source">weather_source</string>
    <string name="geolocation">geolocation</string>
    <string name="isp">isp</string>
    <string name="app_name">Net Analyzer</string>
    <string name="package_name_pro">com.thapasujan5.netanalyzerpro</string>

    <string name="adunitid">ca-app-pub-9439947497150902/3246060472</string>
    <string name="show_ads">show_ads</string>
    <string name="ads_summary">View top app suggestions.</string>
    <string name="title_show_ads">Show Ads</string>
    <string name="key_time_interval">time_interval</string>
    <string name="key_distance_interval">distance_interval</string>
    <string name="source_isp_info">source_isp_info</string>

</resources>

