<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/title_tools">
        <menu>
            <item
                android:id="@+id/nav_connectiondetails"
                android:icon="@android:drawable/ic_menu_directions"
                android:title="@string/title_connectiondetails" />
            <item
                android:id="@+id/nav_dnsip"
                android:icon="@android:drawable/ic_menu_save"
                android:title="@string/title_dnslookup" />
            <item
                android:id="@+id/nav_networkdiscovery"
                android:icon="@android:drawable/ic_menu_search"
                android:title="@string/title_networkdiscovery" />
            <item
                android:id="@+id/nav_ping"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/title_ping" />

          
        </menu>
    </item>
    <item android:title="@string/title_social">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/title_tell_a_friend" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@android:drawable/ic_menu_agenda"
                android:title="@string/title_rate_app" />
            <item
                android:id="@+id/nav_report"
                android:icon="@android:drawable/ic_menu_edit"
                android:title="@string/title_report" />

            <item
                android:id="@+id/nav_likeus"
                android:icon="@android:drawable/ic_menu_view"
                android:title="@string/title_like_us" />

        </menu>
    </item>
    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/title_about" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/title_settings" />
        </menu>
    </item>
</menu>
