<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<SwitchPreference-->
    <!--android:key="example_switch"-->
    <!--android:title="@string/pref_title_social_recommendations"-->
    <!--android:summary="@string/pref_description_social_recommendations"-->
    <!--android:defaultValue="true" />-->

    <!--&lt;!&ndash; NOTE: EditTextPreference accepts EditText attributes. &ndash;&gt;-->
    <!--&lt;!&ndash; NOTE: EditTextPreference's summary should be set to its value by the activity code. &ndash;&gt;-->


    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@mipmap/ic_network_check"
        android:key="@string/startup_scan"
        android:summary="Scan automatically on open."
        android:switchTextOff="Startup Disovery Off"
        android:switchTextOn="Startup Discovery On"
        android:title="@string/title_startup_discovery" />


    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_temperatures"
        android:entryValues="@array/pref_temperature_values"
        android:icon="@mipmap/ic_brightness"
        android:key="@string/key_temperature"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="Temperature Unit" />
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_ping_packets"
        android:entryValues="@array/pref_ping_values"
        android:icon="@mipmap/merge"
        android:key="@string/key_ping"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="Ping Packets" />
    <PreferenceCategory
        android:icon="@mipmap/place"
        android:title="Weather Update Frequency">

        <EditTextPreference
            android:icon="@mipmap/time"
            android:inputType="numberSigned"
            android:key="@string/key_time_interval"
            android:summary="Minimum time elapsed.(minutes)"
            android:title="By Time(minute)" />
        <EditTextPreference
            android:icon="@mipmap/directions"
            android:inputType="numberSigned|numberDecimal"
            android:key="@string/key_distance_interval"
            android:summary="Minimum distance travelled.(meters)"
            android:title="By Distance(meter) " />
    </PreferenceCategory>

    <!--<Preference-->
    <!--android:icon="@mipmap/ic_clear"-->
    <!--android:key="@string/key_clear_cache"-->
    <!--android:summary="Clean application cache data."-->
    <!--android:title="Clear Cache"-->
    <!--android:widgetLayout="@layout/button" />-->

</PreferenceScreen>